# demo_server_oneir

./: .gitattributes  .gitignore  1.txt  CMakeLists.txt  README.md
client/: client.cc  client.h  main.cc
common/: CMakeLists.txt  baseserver.cc  baseserver.h  buffer.cc  buffer.h  clientmoudle.cc  clientmoudle.h  epoll.cc  epoll.h  errorcode.h  msghandle.h  msghead.cc  msghead.h  mysqlplus.cc  mysqlplus.h  noncopyable.h  redisplus.cc  redisplus.h  singleton.h  socket.cc  socket.h  threadtask.h
gameserver/: backpack.cc  backpack.h  item.cc  iteminterface.h
gateserver/: gatelogic.cc  gatelogic.h  gateserver.cc  gateserver.h  main.cc
loginserver/: loginlogic.cc  loginlogic.h  loginserver.cc  loginserver.h  main.cc
protosrc/: Demo.proto  ProtoID.proto
server/: backpack.cc  backpack.h  item.cc  item.h  iteminterface.h  main.cc  player.cc  player.h  server.cc  server.h
